Fix the Navbar Logo Visibility

--- a/css/global.css
+++ b/css/global.css
@@ -26,7 +26,7 @@ header {
 
 /* Logo Styling */
 .site-logo {
-    height: 50px;
+    height: 60px;
     /* Adjust this to fit your design */
     width: auto;
     display: block;
@@ -109,7 +109,7 @@ footer {
 }
 
 .logo {
-    height: 42px;
+    height: 60px;
 }
 
 .nav-links {
